# DeepQLearning

./: .gitignore  CMakeLists.txt  DeepReinforcementLearning.cpp  DeepReinforcementLearning.h
includes/core/CompositeExploration/: CompositeExploration .h
includes/core/ExecutionContext/: ExecutionContext.h
includes/core/ExplorationFactory/: ExplorationFactory .h
includes/core/ExplorationMetrics/: ExplorationMetrics.h
includes/core/ExploratoryStrategy/: ExplorationStrategy.h
includes/core/ExploratoryStrategy/DefaultEntropyCalculator/: DefaultEntropyCalculator.h
includes/core/ExploratoryStrategy/ExplorationStrategy/: ExplorationStrategy.h
includes/core/ExploratoryStrategy/boltzmannExploration/: BoltzmannExploration.h
includes/core/ExploratoryStrategy/entropyBasedExploration/: EntropyBasedExploration.h
includes/core/ExploratoryStrategy/epsilonGreedy/: EpsilonGreedy.h
includes/core/ExploratoryStrategy/noisyExploration/: NoisyExploration.h
includes/core/PlatformConfig/: platformConfig.h
includes/core/agents/concepts/: general_concepts.hpp
includes/core/agents/layers/activation/: activatio_layers.hpp  activation.hpp  activation_base.hpp  activation_concept.hpp  activation_factory.hpp  utils.hpp
includes/core/agents/layers/dropout/: basic_interface.hpp  drop_factory.hpp  dropout_concept.hpp  dropout_core.hpp  dropout_data_structur.hpp  dropout_manager.hpp
includes/core/agents/layers/neurone/: DenseLayer.hpp  LayerBase.hpp  neuron_concept.hpp
includes/core/agents/layers/normalizer/: batchnormalizer.hpp  (+8 more)
includes/core/agents/networkArchitecture/: networkArchitecture.hpp
includes/core/concepts/: concepts.hpp
includes/core/data_structure/: data_structure.hpp
includes/core/exploration/ExplorationFactory/: ExplorationFactory .h
includes/core/hardwareTraits/: HardwareTraits.h
includes/core/replayBuffer/abstractBuffer/: abstractBuffer.h
includes/core/replayBuffer/prioritizedBuffer/: prioritizedBuffer.h
includes/core/threadPool/: threadPool.h
includes/core/utils/simd_utils/: simd_utils.hpp
includes/layers/activation/: activation.hpp
src/core/CompositeExploration/: CompositeExploration .cpp
src/core/ExecutionContext/: ExecutionContext.cpp
src/core/ExplorationFactory/: ExplorationFactory .cpp
src/core/ExplorationMetrics/: ExplorationMetrics.cpp
src/core/ExploratoryStategy/DefaultEntropyCalculator/: DefaultEntropyCalculator.cpp
src/core/ExploratoryStategy/boltzmannExploration/: BoltzmannExploration.cpp
src/core/ExploratoryStategy/entropyBasedExploration/: EntropyBasedExploration.cpp
src/core/ExploratoryStategy/epsilonGreedy/: EpsilonGreedy.cpp
src/core/ExploratoryStategy/noisyExploration/: NoisyExploration.cpp
src/core/replayBuffer/bufferAdapter/: bufferAdapter.cpp
src/core/replayBuffer/prioritizedBuffer/: prioritizedBuffer.cpp
tests/activationTest/: activationTest.cpp
tests/explorationstrategyTest/: explorationStrategyTest.cpp
(+7 files in other folders)
